// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Braintree hosted fields can set token ref after render 1`] = `
Array [
  Array [
    Object {
      "client": [MockFunction],
      "fields": Object {
        "cardholderName": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "name",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-1",
        },
        "cvv": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "cvv",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-6",
        },
        "expirationDate": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "date",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-3",
        },
        "expirationMonth": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "month",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-4",
        },
        "expirationYear": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "year",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-5",
        },
        "number": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "cc #",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-2",
        },
        "postalCode": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "zip",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-7",
        },
      },
      "styles": Object {
        "foo": "bar",
      },
    },
    [Function],
  ],
]
`;

exports[`Braintree hosted fields can set token ref during render 1`] = `
Array [
  Array [
    Object {
      "client": [MockFunction],
      "fields": Object {
        "cardholderName": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "name",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-1",
        },
        "cvv": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "cvv",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-6",
        },
        "expirationDate": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "date",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-3",
        },
        "expirationMonth": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "month",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-4",
        },
        "expirationYear": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "year",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-5",
        },
        "number": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "cc #",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-2",
        },
        "postalCode": Object {
          "formatInput": undefined,
          "maxlength": undefined,
          "minlength": undefined,
          "placeholder": "zip",
          "prefill": undefined,
          "select": undefined,
          "selector": "#braintree-field-wrapper-7",
        },
      },
      "styles": Object {},
    },
    [Function],
  ],
]
`;

exports[`Braintree hosted fields renders and matches snapshot 1`] = `
"<div class=\\"braintree-hosted-fields-wrapper braintree-test\\">
  <div id=\\"braintree-field-wrapper-1\\" class=\\"braintree-hosted-field\\"></div>
  <div id=\\"braintree-field-wrapper-2\\" class=\\"braintree-hosted-field\\"></div>
  <div id=\\"braintree-field-wrapper-3\\" class=\\"braintree-hosted-field\\"></div>
  <div id=\\"braintree-field-wrapper-4\\" class=\\"braintree-hosted-field\\"></div>
  <div id=\\"braintree-field-wrapper-5\\" class=\\"braintree-hosted-field\\"></div>
  <div id=\\"braintree-field-wrapper-6\\" class=\\"braintree-hosted-field\\"></div>
  <div id=\\"braintree-field-wrapper-7\\" class=\\"braintree-hosted-field\\"></div>
</div>"
`;
